# smart-delivery-system

./: .gitignore  CLAUDE.md  README.md  app.py  main.py  pick_points_map.html  pyproject.toml  requirements.txt  启动界面.bat  界面说明文档.md
config/: settings.py
data/: example.csv  北京各个区快递配送.csv  校内游览.csv  西直门外卖店.csv
docs/: data_dictionary.md  五分钟课堂汇报流程.md  答辩准备_核心程序与功能全覆盖.md  课程设计报告_智能配送优化系统.docx
scripts/: collect_all_day.py  demo.py  run_system.py  train_adaptive.py  train_travel_time.py  warm_cache.py
src/: __init__.py
src/adaptive/: __init__.py  congestion_predictor.py  train_congestion.py
src/algorithms/: shortest_path.py  vehicle_types.py  vrp_solver.py
src/benchmark/: __init__.py  baselines.py  public_datasets.py  runner.py
src/map/: __init__.py  amap_network.py  legal_mask.py  road_network.py
src/ml/: __init__.py  data_collector.py  travel_time_predictor.py
src/traffic/: __init__.py  congestion_engine.py  predictor.py  route_traffic_lights.py  time_rules.py  traffic_lights.py
src/utils/: data_processing.py  geo_utils.py  standards.py
src/visualization/: amap_map.py  enhanced_map.py  folium_maps.py  plotly_animation.py  viz_system.py
