[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-delivery-system"
version = "1.0.0"
description = "智能配送优化系统 — 基于高德地图 API + LightGBM + 在线自适应预测的异构车队配送优化"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yang Pengyu"}
]
keywords = ["vrp", "vehicle-routing", "delivery", "optimization", "lightgbm", "online-learning", "adaptive-prediction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ortools>=9.0",
    "lightgbm>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "folium>=0.15",
    "plotly>=5.15",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "networkx>=3.0",
    "osmnx>=1.5",
    "geopandas>=0.13",
]

[tool.setuptools.packages.find]
include = ["src*", "config*"]
